# qintern-kagome-hva

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements-core.txt  requirements-lock.txt  requirements-qiskit.txt  requirements.txt  run_all.ps1  run_all.sh
data/: 19site_bonds.csv
docs/: ansatz_circuit.md
figures/: README.md
notebooks/: 19site_heisenberg_hva_fast.ipynb  19site_rvb_subspace.ipynb  heisenberg_gate_poc_small_patch.ipynb  main_19site_weighted_rvb_hva_result.ipynb
report/: README.md  kagome_hva_report.tex  report_1_initial_report.tex
results/: 19site_bond_correlations_by_state.csv  19site_bond_diagnostics.csv  19site_calibration_scan.csv  19site_entropy_profiles.csv  19site_fixed_sz_exact_n9.npz  19site_heisenberg_hva_fast_weighted_p2_reference.csv  19site_heisenberg_hva_fast_weighted_p2_reference.metadata.json  19site_heisenberg_hva_fast_weighted_p2_reference_history.csv  19site_heisenberg_hva_fast_weighted_p4_neldermead_mi800_r6_seed123_20260703_012608.csv  19site_heisenberg_hva_fast_weighted_p4_neldermead_mi800_r6_seed123_20260703_012608.metadata.json  19site_heisenberg_hva_fast_weighted_p4_powell_mi800_r6_seed123_20260703_025111.csv  19site_heisenberg_hva_fast_weighted_p4_powell_mi800_r6_seed123_20260703_025111.metadata.json  19site_hva_p1_gradients.csv  19site_paper_diagnostics.csv  19site_rvb_coverings_n54.csv  19site_rvb_overlap_spectrum.csv  19site_rvb_subspace.csv  19site_rvb_subspace.metadata.json  19site_rvb_subspace_coefficients_n54.csv  19site_site_magnetization.csv  README.md  (+20 more)
(+22 files in other folders)
